unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/tspa__PlatformEventMonitoring__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Platform Event Monitoring Configuration</label>
</CustomObject>