unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__EnableEmailToSupport__c.field-meta.xml
<CustomField>
    <fullName>tspa__EnableEmailToSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable email to support</label>
    <type>Checkbox</type>
</CustomField>