unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__EnableEmailToSystemAdmin__c.field-meta.xml
<CustomField>
    <fullName>tspa__EnableEmailToSystemAdmin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable email to system admin</label>
    <type>Checkbox</type>
</CustomField>