unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__EnableMonitoring__c.field-meta.xml
<CustomField>
    <fullName>tspa__EnableMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The setting enables or disables the Platform Events Monitoring. Disabling this setting will stop the monitoring process, and disable all types of alerts (emails, logs, and warnings to the agent) if the platform events quota passes the thresholds.</inlineHelpText>
    <label>Enable monitoring</label>
    <type>Checkbox</type>
</CustomField>