unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__NotificationIntervalsInHours__c.field-meta.xml
<CustomField>
    <fullName>tspa__NotificationIntervalsInHours__c</fullName>
    <defaultValue>12</defaultValue>
    <inlineHelpText>The settings set the maximum frequency that the email notification will be sent, set in hours. the recommended value is 12 hours. Minimum value is 1 hour.</inlineHelpText>
    <label>Notification interval in hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>