unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__SupportEmail__c.field-meta.xml
<CustomField>
    <fullName>tspa__SupportEmail__c</fullName>
    <inlineHelpText>The setting has the email address Visual Remote Assistant support which will get the email with a notification about the platform events quota threshold reached. It can have one email address.</inlineHelpText>
    <label>Support email</label>
    <type>Email</type>
</CustomField>