unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__SystemAdminEmail__c.field-meta.xml
<CustomField>
    <fullName>tspa__SystemAdminEmail__c</fullName>
    <inlineHelpText>The setting has a list of emails that will get the email with a notification about the platform events quota thresholds passed. It can have up to three email addresses, the emails must be separated by commas without spaces.</inlineHelpText>
    <label>System admin emails</label>
    <type>TextArea</type>
</CustomField>