unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__Threshold1__c.field-meta.xml
<CustomField>
    <fullName>tspa__Threshold1__c</fullName>
    <defaultValue>80</defaultValue>
    <inlineHelpText>Threshold 1 set the threshold in percentage from the org quota (either published platform events or delivered platform events) that will trigger log notifications and email alerts (based on email settings). 
threshold 1 should be less than threshold 2.</inlineHelpText>
    <label>Threshold 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>