unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/fields/tspa__Threshold2__c.field-meta.xml
<CustomField>
    <fullName>tspa__Threshold2__c</fullName>
    <defaultValue>90</defaultValue>
    <inlineHelpText>Threshold 2 set the threshold in percentage from the org quota (either published platform events or delivered platform events) that will trigger an agent warning on top of the logs and email alerts.
Threshold 2 should be higher than threshold 1.</inlineHelpText>
    <label>Threshold 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>