unpackaged/main/default/objects/tspa__PlatformEventMonitoring__c/listViews/tspa__PlatformEventMonitoringView.listView-meta.xml
<ListView>
    <fullName>tspa__PlatformEventMonitoringView</fullName>
    <columns>tspa__EnableMonitoring__c</columns>
    <columns>tspa__EnableEmailToSupport__c</columns>
    <columns>tspa__EnableEmailToSystemAdmin__c</columns>
    <columns>tspa__SupportEmail__c</columns>
    <columns>tspa__SystemAdminEmail__c</columns>
    <columns>tspa__Threshold1__c</columns>
    <columns>tspa__Threshold2__c</columns>
    <columns>tspa__NotificationIntervalsInHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>Platform Event Monitoring View</label>
    <language>en_US</language>
</ListView>